Use case 1~6 done -Configuration Dialog:  Implemented a textwatcher.

--- a/hw1/data-vilij/resources/css/.css
+++ b/hw1/data-vilij/resources/css/.css
@@ -44,7 +44,10 @@
     -fx-stroke: transparent;
 }
 
-
+.chart-vertical-zero-line,
+.chart-horizontal-zero-line  {
+    -fx-stroke: transparent;
+}
 
 
 .onHover{
