--- a/hw1/data-vilij/resources/css/.css
+++ b/hw1/data-vilij/resources/css/.css
@@ -1,13 +1,37 @@
+.root {
+   -fx-background-color:
+                                       #111316,
+                                       linear-gradient(#38444f 0%, #1f2429 20%, #191d22 100%),
+                                       linear-gradient(#20262b, #191d22),
+                                       radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
+}
 .chart-plot-background {
     -fx-border-color: black;
     -fx-border-width: 4px;
-    /*-fx-border-insets: -2px;*/
+  -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+
 
 }
+
+
+.chart-title {
+    -fx-font-family: Tahoma;
+                                   -fx-text-fill: linear-gradient(white, #d0d0d0);
+                                   -fx-font-size: 12px;
+}
+
 .default-color0.chart-series-line { -fx-stroke: blue; }
 
 .chart-series-line {
   -fx-stroke: transparent;
+}
+
+.axis {
+    -fx-font-size: 1.4em;
+    -fx-tick-label-fill:white;
+    -fx-font-family: Tahoma;
+    -fx-tick-length: 20;
+    -fx-minor-tick-length: 10;
 }
 .line-symbol {
     -fx-background-color: transparent, transparent;
@@ -16,20 +40,13 @@
 .default-color0.chart-line-symbol { -fx-background-color: transparent; }
 
 
-.axis:top {
+.axis{
     -fx-border-color: transparent;
 }
-
-.axis:right {
-    -fx-border-color: transparent;
-}
-
-.axis:bottom {
-    -fx-border-color: transparent;
-}
-
-.axis:left {
-    -fx-border-color: transparent;
+.axis-label {
+       -fx-font-family: Tahoma;
+                                      -fx-text-fill: linear-gradient(white, #d0d0d0);
+                                      -fx-font-size: 12px;
 }
 .axis-tick-mark {
     -fx-stroke: #637040;
@@ -48,12 +65,93 @@
 .chart-horizontal-zero-line  {
     -fx-stroke: transparent;
 }
+.round_labelNames {
+    -fx-background-color: linear-gradient(#f95a0c, #be1d00);
+    -fx-background-radius: 40;
+           -fx-padding: 0 12 0 10;
+            -fx-text-fill: white;
 
+-fx-spacing: 4;
+}
+.background{
+                                -fx-background-color: #111316,
+                                     linear-gradient(#38444f 0%, #1f2429 20%, #191d22 100%),
+                                     linear-gradient(#20262b, #191d22),
+                                     radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
+                                 -fx-background-radius: 3,2,1,3;
+                                 -fx-background-insets: 0,1,2,0;
+                                 -fx-text-fill: white;
+                                 -fx-font-family: Tahoma;
+                               -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+                                 -fx-text-fill: linear-gradient(white, #d0d0d0);
+                                 -fx-font-size: 12px;
+}
+.dialog_background{
+                                 -fx-background-color: #111316,
+                                     linear-gradient(#38444f 0%, #1f2429 20%, #191d22 100%),
+                                     linear-gradient(#20262b, #191d22),
+                                     radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
+                                 -fx-background-radius: 5,4,3,5;
+                                 -fx-text-fill: white;
+                                 -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+                                 -fx-font-family: Tahoma;
+                                 -fx-text-fill: linear-gradient(white, #d0d0d0);
+                                 -fx-font-size: 12px;
+}
+.labels{
 
+                                 -fx-fill: white;
+                                 -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+                                 -fx-font-family: Tahoma;
+                                 -fx-font-size: 12px;
+}
+.radiobuttons{
+    -fx-text-fill: white;
+                                    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+                                 -fx-font-family: Tahoma;
+                                 -fx-font-size: 12px;
+}
 .onHover{
     -fx-background-color: ORANGE;
     -fx-cursor: hand;
 }
 .tooltip {
     -fx-show-duration: 1s ;
+}
+
+.other-button {
+
+  -fx-background-color:
+                                     #111316,
+                                     linear-gradient(#38444f 0%, #1f2429 20%, #191d22 100%),
+                                     linear-gradient(#20262b, #191d22),
+                                     radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
+-fx-background-insets: 0,1,2,0;
+  -fx-background-radius: 5,4,3,5;
+                                 -fx-text-fill: white;
+                                 -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+                                 -fx-font-family: Tahoma;
+                                 -fx-text-fill: linear-gradient(white, #d0d0d0);
+                                 -fx-font-size: 12px;
+                                 -fx-padding: 5 20 5 20;
+}
+
+
+.combo-box .list-cell
+{
+  -fx-background-color:
+                                      #111316,
+                                      linear-gradient(#38444f 0%, #1f2429 20%, #191d22 100%),
+                                      linear-gradient(#20262b, #191d22),
+                                      radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
+                                 -fx-text-fill: white;
+                                 -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+                                 -fx-font-family: Tahoma;
+                                 -fx-text-fill: linear-gradient(white, #d0d0d0);
+                                 -fx-font-size: 12px;
+                                 -fx-padding: 5 15 5 15;
+}
+
+.combo-box-base:disabled {
+    -fx-opacity: .4;
 }
